Fixes on mobile version

--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -185,6 +185,9 @@ table {
 
 .table-grid {
   @media screen and (max-width: $tablet-md - 1) {
+    thead tr {
+      display: none;
+    }
     tr {
       border: 1px solid $border-color;
       background: #fff;
