--- a/_sass/_search.scss
+++ b/_sass/_search.scss
@@ -270,11 +270,12 @@
     border: 1px solid #4C4845;
     border-radius: 10px;
     background-color: #FFFFFF;
-    padding: 0 75px 0 50px;
+    padding: 0 75px 0 40px;
     width: 100%;
 
     @media screen and (min-width: $tablet-md) {
       height: 60px;
+      padding: 0 75px 0 50px;
     }
   }
 
@@ -294,7 +295,7 @@
     align-items: center;
     justify-content: center;
     height: 48px;
-    width: 90px;
+    width: 70px;
     color: #fff;
     background: #006AB1;
     border: 1px solid #006AB1;
@@ -305,6 +306,7 @@
 
     @media screen and (min-width: $tablet-md) {
       height: 60px;
+      width: 90px;
     }
   }
 }
